<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.hotelapplication.data.ItemResponse" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:elevation="@dimen/cardview_default_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/display_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/delete_image"
                android:layout_width="21dp"
                android:layout_height="22dp"
                android:background="@drawable/ic_baseline_remove_circle_outline_24"
                android:backgroundTint="@color/rouge"
                android:contentDescription="@string/delete_button_description"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="@id/display_image"
                app:layout_constraintTop_toTopOf="@id/display_image" />

            <TextView
                android:id="@+id/text1name"
                android:layout_width="103dp"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/name_description"
                android:fontFamily="sans-serif"
                android:textColor="@color/lightblack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/display_image"
                app:layout_constraintVertical_bias="0.187"
                app:text="@{data.name}"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/text2price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/price_description"
                android:textColor="@color/lightblack"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text3des"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1name"
                app:text="@{String.valueOf(data.price)}"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/text3des"
                android:layout_width="356dp"
                android:layout_height="29dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/description_description"
                android:textColor="@color/purple_200"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2price"
                app:text="@{data.description}"
                tools:text="@tools:sample/full_names" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
